--- a/ASPCoreWebApiLogin.csproj
+++ b/ASPCoreWebApiLogin.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
+    <PackageReference Include="TanvirArjel.CustomValidation" Version="1.2.1" />
+    <PackageReference Include="TanvirArjel.CustomValidation.AspNetCore" Version="1.2.1" />
   
   </ItemGroup>
 
